--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  release:
+  demo-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,7 +15,7 @@ jobs:
           cd demo
           npm run build
       - name: 🚀 Publish Demo
-        uses: JamesIves/github-pages-deploy-action@4.2.2
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: demo
           folder: demo/build
